# EduMind

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP_ON_NEW_COMPUTER.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  setup.bat  setup.sh  start-xai.sh
.github/workflows/: cd-app.yml  ci-app.yml  deployment-pipeline-for-alert-webhook.yml  frontend-ci.yaml  ml-pipeline.yml  models-pipeline.yaml  trigger-jenkins.yml
Docs/: COMPONENT_BREAKDOWN.md  NX_SETUP.md  README.md  STATE_MANAGEMENT.md  TURBOREPO_SETUP.md  edumind_gcp_architecture.py
TODO/: credentials.todo  day.todo  dev.todo  tets .todo
apps/web/: .gitignore  SETUP_INSTRUCTIONS.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
backend/: Jenkinsfile  docker-compose.yml
backend/shared/: config.py  logging.py  messaging.py  middleware.py
deployments/poc-ci-pipeline-webhook-service/: .env.example  .gitignore  CHANGES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  PIPELINE_SUMMARY.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  docker-compose.yml  requirements.txt  setup.bat  setup.sh  test_alert_to_issue.py  test_service.py  (+2 more)
ml/: .gitignore  README.md  requirements.txt
mlops/: .gitignore  docker-compose.yaml  requirements.txt
mlops/models/xai_predictor/: Dockerfile  README.md  pyproject.toml  train_multiclass.py
mlops/models/xai_predictor/Notebooks/demos/: XAI-Prediction.ipynb  quick_demo.py
mlops/models/xai_predictor/config/: __init__.py
mlops/models/xai_predictor/scripts/: __init__.py  debug_model.py  interactive_assessment.py  run_pipeline.py  test_medium_risk.py  test_predictions.py  test_recommendations.py
mlops/models/xai_predictor/src/: __init__.py
mlops/models/xai_predictor/src/utils/: __init__.py  metrics.py
mlops/models/xai_predictor/tests/: __init__.py  conftest.py  test_etl.py  test_predictor.py  test_trainer.py
(+442 files in other folders)
